# dnstt-kit

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RUST_SYNTAX.md  SECURITY.md  clippy.toml  dns-cli.cmd  docker-compose.yml  run.py  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
.github/workflows/: ci.yml  release.yml
config/: profiles.example.json
dns-cli/: Cargo.toml  build.rs
dns-cli/src/: archive.rs  backup.rs  clean.rs  config.rs  db.rs  decode.rs  doctor.rs  env_file.rs  init_cmd.rs  jobs.rs  main.rs  menu.rs  output.rs  pipeline.rs  presets.rs  resolvers.rs  scan_cmd.rs  slipnet.rs  verify.rs  web.rs  web_security.rs  workdir.rs
dns-cli/src/generate/: dnstt.rs  kryo.rs  mod.rs  netmod.rs  slipnet_uri.rs
dns-cli/static/: index.html  site.css
dns-cli/tests/: cli.rs  real_dns.rs  web_smoke.rs
docs/: BACKUP.md  BUILD.md  CLI.md  CLIENTS.md  CROSS_PLATFORM.md  DOCKER.md  ENV.md  FFI_PYTHON.md  GITHUB_SEO.md  MEMORY.md  OPTIONS.md  SECURITY_WEB.md  SLIPNET.md  TESTING.md  TUTORIAL.md  WEB.md
local/: README.md
python/: scanner_ffi.py
scanner-core/: Cargo.toml
scanner-core/src/: ffi.rs  lib.rs
scripts/: backup-scheduled.ps1  build-release.ps1  build-release.sh  gen_kryo_golden.py  github-seo.ps1  quality.ps1  quality.sh  smoke.ps1
testdata/: dns_sample.txt  kryo_golden_link.txt  kryo_golden_meta.json  kryo_golden_raw.hex  resolvers_sample.json  tokhmi_tiny.txt
